--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script  src="main.js" defer></script>
+    <title>Studio Ghibli</title>
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Studio Ghibli</title>      
 </head>
 <body>
     <header>
-        <img src="https://ghibliapi.vercel.app/images/logo.svg"
-        alt="Studio Ghibli logo">
+        <img src="https://ghibliapi.vercel.app/images/logo.svg" alt="Studio Ghibli logo">
     </header>
     <main>
+        <article id="data"></article>
         <h2>Studio Ghibli Films</h2>
         <ul id="movies"></ul>
     </main>
-    
 </body>
 </html>
